manifests/infra/keycloak/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ipallowlist
spec:
  ipAllowList:
    sourceRange:
      - 192.168.0.1/24 # Local network
      - 10.0.0.0/8     # Cluster network
