manifests/infra/keycloak/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: keycloak-ipallowlist@kubernetescrd
    traefik.ingress.kubernetes.io/service.serversscheme: https 
    traefik.ingress.kubernetes.io/service.serverstransport: keycloak-keycloak-custom-root-ca@kubernetescrd
  name: keycloak-admin
spec:
  ingressClassName: traefik
  rules:
  - host: keycloak.homelab.olav.ninja
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              name: http
        path: /admin
        pathType: Prefix
  tls:
  - hosts:
    - keycloak.homelab.olav.ninja
    secretName: keycloak.homelab.olav.ninja-tls
